2007-12-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-headers.c: Add some more fields to
	SoupMessageHeaders, and start caching the parsed values of certain
	important headers.
	(soup_message_headers_get/set_encoding): replaces old SoupMessage
	methods, and only deals with the declared transfer encoding, not
	the wire encoding.
	(soup_message_headers_get/set_content_length): Handle
	Content-Length.
	(soup_message_headers_get_expectations): Handle Expect. (Replaces
	the SOUP_MESSAGE_EXPECT_CONTINUE flag).

	* libsoup/soup-message.c (soup_message_get_request_encoding):
	(soup_message_get_response_encoding):
	(soup_message_set_response_encoding): replaced by
	SoupMessageHeaders methods.

	* libsoup/soup-message-client-io.c:
	* libsoup/soup-message-server-io.c:
	* libsoup/soup-message-io.c: Update for SoupMessageHeaders changes
	with encoding/content-length stuff.

2007-12-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message-body.c (SoupMessageBody): new opaque type
	for request/response bodies allowing less hacky handling of
	chunked encoding.
	(SoupBuffer): refcounted buffer type

	* libsoup/soup-message.h (SoupMessage): turn request and response
	members into SoupMessageBody.
	(SoupOwnership, SoupDataBuffer): gone, replaced by
	SoupMessageBody/SoupBuffer.

	* libsoup/soup-message.c (soup_message_wrote_chunk)
	(soup_message_got_chunk): add the chunk as a signal param rather
	than having it be visible in msg->request/response.
	(soup_message_add_chunk, soup_message_add_final_chunk)
	(soup_message_pop_chunk): replaced by SoupMessageBody methods now.

2007-12-19  Dan Winship  <danw@gnome.org>

	* libsoup/soup-xmlrpc.c:
	* libsoup/soup-value-utils.c: Oops. Change the API a bunch so this
	works on x86; apparently I was doing illegal things with va_lists
	before that only work on x86_64.

2007-12-14  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c: use GObject properties for SoupMessage
	fields.

	* libsoup/soup-message-server-io.c: 